data/derived/sp14/progs/unify/prog2689.ml.out
Characters 86-92:
  if boo then wwhile (func)
                     ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('b -> 'a * bool) * 'b
